<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:locale="de">
    <string name="quiz_number">Quiz %1$d</string>
    <string name="question_number">Frage %1$d</string>
    <string name="close_word">Schließen</string>
    <string name="badge_new">NEU</string>
    <string name="next_quiz">Quiz %1$d - %2$s Uhr</string>
    <string name="next_quiz_unschedule">Wir planen noch</string>
    <string name="answer">Antwort</string>
    <string name="questions_hint">%1$d/60</string>
    <string name="time_format">%1$s Uhr</string>
    <string name="unknown_word">unbekannt</string>
    <string name="maximize_image">Bild vergrößern</string>
    <string name="additions_section">Schätzfragen</string>
    <string name="open_quiz">zu Quiz %1$d</string>
    <string name="word_update">Update</string>
    <string name="no_connection_error">Keine Internetverbindung vorhanden.</string>

    <string name="expanded">ausgeklappt</string>
    <string name="collapsed">zusammengeklappt</string>

    <string name="update_log_version_code_4_title">Version 4.0</string>
    <string name="update_log_version_code_4_content"><![CDATA[
        <b>NEU</b>: Es gibt jetzt Bild-Fragen<br>
        <b>NEU</b>: Der Artikelbereich heißt jetzt "Nachrichten" mit weiteren Inhalten.<br>
        <b>NEU</b>: Im täglichen Update sind nun Quiz-Fragen enthalten.<br>
        <b>NEU</b>: Es gibt jetzt Nutzeraktionen in den Quiz-Details.<br>
        <b>NEU</b>: Vom Artikel kann direkt zum zugehörigen Quiz gesprungen werden.<br>
        <b>NEU</b>: Der Bereich: Über DKQ<br>
        <b>BUG-FIX</b>: Geöffnete Antworten von ungelesenen Fragen.<br>
        <b>BUG-FIX</b>: Keine Daten mit Android Pie.<br>
        <b>BUG-FIX</b>: Unvollständige Daten beim Sync.<br>
        <b>BESSER</b>: Design<br>
        <b>BESSER</b>: Performance<br>
        <b>BESSER</b>: Fehlerdialog beim Absturz.<br>
        <b>BESSER</b>: Benachrichtigungen führen direkt zum Inhalt.
    ]]></string>
    <string name="update_log_version_code_5_title">Version 5.0</string>
    <string name="update_log_version_code_5_content"><![CDATA[
        <b>NEU</b>: Einstellung für einen täglichen Update Report<br>
        <b>BESSER</b>: Performance<br>
        <br>
        Mit der Einstellung \"Täglicher Report\" könnt Ihr überprüfen, ob die App bei euch jeden Tag nach neuen Inhalten im Hintergrund sucht. Die Nachricht die Ihr erhaltet wird in zukunft noch verbessert werden. Sollte jeden Tag eine Nachricht mit \"(fail)\" erscheinen, bitte eine E-Mail an mich schreiben.
    ]]></string>

    <!-- ACRA -->
    <string name="acra_dialog_title">DKQ Fehler</string>
    <string name="acra_dialog_text">Leider ist ein Fehler aufgetreten. Möchten Sie einen Bericht zur Analyse per E-Mail verschicken?</string>
    <string name="acra_dialog_positiv">senden</string>
    <string name="acra_dialog_negativ">abbrechen</string>

    <!-- Messages -->
    <string name="no_messages">Keine News zum DKQ</string>
    <plurals name="messages_section">
        <item quantity="one">%1$d Nachricht</item>
        <item quantity="other">%1$d Nachrichten</item>
    </plurals>

    <!-- Quizzes -->
    <string name="no_quizzes">Keine Quizze vorhanden</string>
    <plurals name="quizzes_section">
        <item quantity="one">%1$d Quiz</item>
        <item quantity="other">%1$d Quizze</item>
    </plurals>

    <!-- Quesstions -->
    <string name="no_questions">Keine Fragen vorhanden</string>
    <string name="questions_section">Runde %1$d</string>

    <!-- Quizzers -->
    <string name="winner_section">%1$d Gewinner</string>
    <string name="quizmaster_section">%1$d Quizmaster</string>
    <string name="no_quizzers">Keine Treffer</string>

    <!-- Menu -->
    <string name="menu_about">Über DKQ</string>
    <string name="menu_development">Entwicklung</string>
    <string name="menu_preferences">Einstellungen</string>

    <!-- Notifications -->
    <string name="notification_channel_name">DKQ Benachrichtigungen</string>
    <string name="notification_channel_description">Zeigt Benachrichtigungen vom DKQ.</string>
    <string name="next_quiz_title">Es gibt neue Termine zum DKQ</string>
    <string name="next_quiz_concrete_description">Quiz %1$d ist ab sofort in Arbeit.</string>
    <plurals name="next_quiz_description">
        <item quantity="one">Das nächste Quiz steht fest.</item>
        <item quantity="other">%1$d neue Quizze stehen bereits fest.</item>
    </plurals>
    <string name="new_messages_title">Es gibt Neuigkeiten vom DKQ</string>
    <plurals name="new_messages_description">
        <item quantity="one">Du hast eine neue Nachricht erhalten.</item>
        <item quantity="other">Du hast %1$d neue Nachrichten erhalten.</item>
    </plurals>
    <string name="daily_update_title">Tägliches Update fertig</string>
    <string name="daily_update_description">Nachrichten: %1$s\nQuizze: %2$s</string>

    <!-- Login -->
    <string name="username">Benutzer</string>
    <string name="password">Passwort</string>
    <string name="login_button">Anmelden</string>
    <string name="register_button">Neues Konto</string>
    <string name="no_registration_text">Wir freuen uns über dein Interesse an DKQ. Derzeit ist die App für eine geschlossene Community und unterstützt keine Registrierung.</string>
    <string name="error_required">Pflichtfeld</string>
    <string name="error_login">Benutzer und/oder Passwort sind inkorrekt</string>

    <!-- Menus -->
    <string name="bottom_navigation_quizzes">Quizze</string>
    <string name="bottom_navigation_news">Nachrichten</string>
    <string name="bottom_navigation_quizzers">Quizzer</string>

    <!-- Preferences -->
    <string name="pref_category_ui">Oberfläche</string>
    <string name="pref_login_screen_title">Anmeldung anzeigen</string>
    <string name="pref_login_screen_summary">Mit dieser Option kann das Anmeldeformular beim Start der App deaktiviert werden.</string>
    <string name="pref_notification_enabled_title">Benachrichtigungen aktiv</string>
    <string name="pref_notification_enabled_summary">Erhalte Benachrichtigungen bei Quiz updates.</string>
    <string name="pref_sounds_enabled_title">Töne aktiv</string>
    <string name="pref_sounds_enabled_summary">Töne können mit dieser Option stumm geschalten werden.</string>
    <string name="pref_category_update">Updates</string>
    <string name="pref_daily_update_notification_enabled_title">Täglicher Report</string>
    <string name="pref_daily_update_notification_enabled_summary">Eine kurze Zusammenfassung zum täglichen Datenabgleich wird als Benachrichtigung verschickt.</string>

    <!-- Development -->
    <string name="test_single_quiz_snackbar">1 neues Quiz (Snackbar)</string>
    <string name="test_single_quiz_notification">1 neues Quiz (Notification)</string>
    <string name="test_many_quiz_notification">X neue Quizze (Notification)</string>
    <string name="test_single_message_notification">1 neue Nachricht (Notification)</string>
    <string name="test_many_message_notification">X neue Nachrichten (Notification)</string>
    <string name="insert_sample_quiz">Quiz 999 anlegen</string>
    <string name="delete_sample_quiz">Quiz 999 löschen</string>
    <string name="subheader_notifications">Benachrichtigungen</string>
    <string name="subheader_quizzes">Quizze</string>
    <string name="subheader_timestamps">Zeitstempel</string>
    <string name="timestamps_text">Update-Worker: %1$s</string>
    <string name="subheader_screenshot_samples">Screenshot Daten</string>
    <string name="drop_all_create_samples">Alles Löschen &amp; Samples anlegen</string>
    <string name="drop_all">Alles Löschen</string>
    <string name="network_info_text">Internet %1$b (%2$s)</string>

    <!-- Quizzers -->
    <string name="quizzers_tab_winners">Gewinner</string>
    <string name="quizzers_tab_quiz_masters">Quizmaster</string>
    <plurals name="quizzers_win_count">
        <item quantity="one">%1$d Sieg</item>
        <item quantity="other">%1$d Siege</item>
    </plurals>
    <plurals name="quizzers_quiz_master_count">
        <item quantity="one">%1$d Quiz</item>
        <item quantity="other">%1$d Quizze</item>
    </plurals>

    <!-- Quiz BottomSheet -->
    <string name="quiz_bottom_sheet_title">Aktionen</string>
    <string name="quiz_bottom_sheet_calendar">Kalendereintrag anlegen</string>
    <string name="quiz_bottom_sheet_calendar_no_date">Für diese Funktion fehlt ein Datum.</string>
    <string name="quiz_bottom_sheet_maps">Location anzeigen</string>
    <string name="quiz_bottom_sheet_maps_no_location">Für diese Funktion fehlt die Location.</string>
    <string name="quiz_bottom_sheet_share">Teilen</string>
    <string name="quiz_bottom_sheet_share_message">Das %1$d. DKQ findet am %2$s um %3$s Uhr im %4$s statt.</string>
    <string name="quiz_bottom_sheet_share_chooser">Teilen über &#8230;</string>
    <string name="word_article">Artikel</string>

    <!-- About -->
    <string name="about_version">DKQ (Version %1$s)</string>
    <string name="about_intro">
        <![CDATA[
            DKQ für Android dient zur Unterstützung der Dresdner KneipenQuiz Gemeinschaft.
            Fragen, Probleme oder Anregungen können per E-Mail an <a href="mailto:%1$s">%1$s</a> geschickt werden.
            DKQ läuft unter der <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>.
            Der Quellcode für diese Anwendung kann unter <a href="https://github.com/felixWackernagel/dkq">https://github.com/felixWackernagel/dkq</a> eingesehen werden.
        ]]>
    </string>

</resources>