<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:text="@string/quiz_bottom_sheet_title"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/textSecondary" />

    <TextView
        android:id="@+id/calendarAction"
        android:text="@string/quiz_bottom_sheet_calendar"
        app:drawableStartCompat="@drawable/ic_insert_invitation_gray_24dp"
        style="@style/BottomSheetButton"/>

    <TextView
        android:id="@+id/mapsAction"
        android:text="@string/quiz_bottom_sheet_maps"
        app:drawableStartCompat="@drawable/ic_place_gray_24dp"
        style="@style/BottomSheetButton"/>

    <TextView
        android:id="@+id/shareAction"
        android:text="@string/quiz_bottom_sheet_share"
        app:drawableStartCompat="@drawable/ic_share_gray_24dp"
        style="@style/BottomSheetButton"/>

</LinearLayout>